fix background color and tooltips not stretching page

--- a/src/styles/Feed.css
+++ b/src/styles/Feed.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   align-items: center;
   row-gap: 16px;
-  padding-bottom: 32px;
   min-height: 665px;
   width: min(100%, 680px);
 }
