--- a/src/styles/ProfilePosts.css
+++ b/src/styles/ProfilePosts.css
@@ -3,6 +3,7 @@
   display: flex;
   column-gap: 16px;
   padding-top: 16px;
+  padding-bottom: 48px;
   align-items: flex-start;
 }
 
@@ -17,7 +18,6 @@
   flex-direction: column;
   position: sticky;
   top: 132px;
-  margin-bottom: 16px;
 }
 
 .ProfilePosts .friends-small .top-bar .upper {
